--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   #pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  #username: 
-  #password:
+  username: root
+  password: timp4mysql
   #socket: /tmp/mysql.sock
 
 development:
